examples/test/testpolicy12324.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12324
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key46: value23
      key42: value33
      key2: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value42
      podSelector:
        matchLabels:
          key27: value44
